--- a/app/src/main/res/layout/fragment_fazendo.xml
+++ b/app/src/main/res/layout/fragment_fazendo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragmentos.Fazendo">
+    tools:context=".view.fragmentos.FazendoFragmento">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
