--- a/app/src/main/res/layout/activity_adicionar_tarefa.xml
+++ b/app/src/main/res/layout/activity_adicionar_tarefa.xml
@@ -55,6 +55,7 @@
             android:textSize="22sp" />
 
         <RadioGroup
+            android:id="@+id/grupoDeBotao"
             android:layout_marginTop="6sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
