--- a/app/src/main/res/layout/fragment_lista.xml
+++ b/app/src/main/res/layout/fragment_lista.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".view.fragmentos.ListaFragmento">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reciclagem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50sp"
+        app:layout_constraintBottom_toBottomOf="@+id/addTarefa"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTarefa"
         android:layout_width="wrap_content"
