--- a/app/src/main/res/layout/activity_adicionar_tarefa.xml
+++ b/app/src/main/res/layout/activity_adicionar_tarefa.xml
@@ -19,7 +19,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.023"
+        tools:ignore="VisualLintTextFieldSize" />
 
     <AutoCompleteTextView
         android:id="@+id/descricao"
@@ -34,7 +35,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titulo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="VisualLintTextFieldSize" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -66,19 +68,23 @@
                 android:id="@+id/baixa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:buttonTint="#4ede56"
                 android:contentDescription="@string/prioridade_baixa" />
 
             <RadioButton
                 android:id="@+id/media"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:buttonTint="#f9cc4b"
                 android:contentDescription="@string/prioridade_media" />
 
             <RadioButton
                 android:id="@+id/alta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/prioridade_alta" />
+                android:contentDescription="@string/prioridade_alta"
+                android:buttonTint="#ff001f"
+                />
         </RadioGroup>
     </LinearLayout>
 
