--- a/app/src/main/res/layout/fragment_lista.xml
+++ b/app/src/main/res/layout/fragment_lista.xml
@@ -11,6 +11,7 @@
         android:id="@+id/reciclagem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50sp"
         android:paddingBottom="50sp"
         app:layout_constraintBottom_toBottomOf="@+id/addTarefa"
         app:layout_constraintEnd_toEndOf="parent"
