--- a/app/src/main/res/layout/layout_reciclavel.xml
+++ b/app/src/main/res/layout/layout_reciclavel.xml
@@ -67,20 +67,15 @@
             android:contentDescription="@string/botao_de_apagar"
             android:scaleType="centerCrop"
             android:src="@android:drawable/ic_menu_delete" />
+
+        <ImageView
+            android:id="@+id/trocarDeLado"
+            android:layout_width="50sp"
+            android:layout_height="48sp"
+            android:layout_marginStart="5sp"
+            app:srcCompat="@android:drawable/ic_menu_send" />
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="3sp"
-        android:background="@color/design_default_color_primary_variant"
-        android:src="?actionBarDivider"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginTop="2sp"
-        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
