--- a/app/src/main/res/layout/fragment_fazendo.xml
+++ b/app/src/main/res/layout/fragment_fazendo.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.fragmentos.FazendoFragmento" >
+    tools:context=".view.fragmentos.FazendoFragmento">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reciclagem2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50sp"
-        android:paddingBottom="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="50sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
