--- a/app/src/main/res/layout/fragment_feito.xml
+++ b/app/src/main/res/layout/fragment_feito.xml
@@ -9,11 +9,6 @@
         android:id="@+id/reciclagem3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50sp"
-        android:paddingBottom="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="50sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
