--- a/app/src/main/res/layout/fragment_lista.xml
+++ b/app/src/main/res/layout/fragment_lista.xml
@@ -12,18 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50sp"
-        android:paddingBottom="50sp"
-        app:layout_constraintBottom_toBottomOf="@+id/addTarefa"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTarefa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="50sp"
+        android:layout_marginEnd="50sp"
         android:layout_marginBottom="60sp"
         android:clickable="true"
         android:contentDescription="@string/botao_para_adicionar_tarefas"
