--- a/app/src/main/res/layout/fragment_fazendo.xml
+++ b/app/src/main/res/layout/fragment_fazendo.xml
@@ -10,5 +10,6 @@
         android:id="@+id/reciclagem2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50sp" />
+        android:layout_marginBottom="50sp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
