--- a/app/src/main/res/layout/fragment_feito.xml
+++ b/app/src/main/res/layout/fragment_feito.xml
@@ -9,6 +9,7 @@
         android:id="@+id/reciclagem3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50sp"/>
+        android:layout_marginBottom="50sp"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
