--- a/app/src/main/res/layout/fragment_lista.xml
+++ b/app/src/main/res/layout/fragment_lista.xml
@@ -11,19 +11,20 @@
         android:id="@+id/reciclagem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50sp"
+        android:layout_marginBottom="50sp"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTarefa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50sp"
-        android:layout_marginBottom="60sp"
+        android:layout_marginEnd="40sp"
+        android:layout_marginBottom="50sp"
         android:clickable="true"
         android:contentDescription="@string/botao_para_adicionar_tarefas"
         android:scaleType="fitCenter"
         android:src="@android:drawable/ic_menu_add"
+        android:tintMode="multiply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
